packages/react-server/examples/basic/src/routes/test/error/boundary/page.tsx
export default function Page() {
  return <div>boundary/page.tsx</div>;
}
